docs/examples/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headscale
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: $(PUBLIC_HOSTNAME)
      http:
        paths:
          - backend:
              service:
                name: headscale
                port:
                  number: 8080
            path: /
            pathType: Prefix
